ejemplo de iptables
# Generated by iptables-save v1.3.5 on Mon Mar 12 14:40:29 2012

#--Copiar completo desde aqui--
*filter
:INPUT ACCEPT [399:69103]
:FORWARD ACCEPT [3741:1954125]
:OUTPUT ACCEPT [34:5456]
#--Hasta aqui--
-A INPUT -s 192.168.1.13 -j ACCEPT
#-A INPUT -d 192.168.1.13 -j ACCEPT

#Hacer forward a direcciones ip de ips en wan
-A FORWARD -s 192.168.1.13 -j ACCEPT
-A FORWARD -d 192.168.1.13 -j ACCEPT

#Hacer forward al trafico de las ips seleccionadas y crear LOGs
-A FORWARD -s 172.16.140.97 -j ACCEPT
-A FORWARD -s 172.16.140.97 -j LOG
-A FORWARD -s 172.16.140.20 -m mac --mac-source 08:00:27:C2:0D:85 -j ACCEPT
-A FORWARD -s 172.16.140.20 -j LOG

#Apertura de puertos para accesar remotamente
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m mac --mac-source 00:13:20:78:CE:A7 -m tcp --dport 22 -m state --state NEW -j ACCEPT

# En esta seccion cerramos el acceso al resto de direcciones ip
-A FORWARD -s 172.16.0.0/255.255.0.0 -j DROP
-A FORWARD -s 192.168.1.0/255.255.255.0 -j DROP
-A FORWARD -s 169.254.0.0/255.255.0.0 -j DROP
-A FORWARD -s 172.16.0.0/255.255.0.0 -i eth1 -p tcp -j DROP
-A FORWARD -s 172.16.0.0/255.255.0.0 -i eth0 -p tcp -j DROP
-A INPUT -d 172.16.0.0 -p tcp -j DROP

COMMIT

# Completed on Mon Mar 12 14:40:29 2012
# Generated by iptables-save v1.3.5 on Mon Mar 12 14:40:29 2012

*nat
:PREROUTING ACCEPT [1427:142023]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [5:302]
-A POSTROUTING -o eth0 -j MASQUERADE #modificar eth0 por eth1 si es nesesario
COMMIT
# Completed on Mon Mar 12 14:40:29 2012
# Generated by webmin

*mangle
:FORWARD ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
